 343.	[bug]		Although zone maintenance SOA queries and
			notify requests were signed with TSIG keys
			when configured for the server in case,
			the TSIG was not verified on the response.

 342.	[bug]		The wrong name was being passed to
			dns_name_dup() when generating a TSIG
			key using TKEY.

 340.	[bug]		The top-level COPYRIGHT file was missing from
			the distribution.

 337.	[bug]		"dig" did not recognize "nsap-ptr" as an RR type
			on the command line.

 336.	[bug]		"dig -f" used 64 k of memory for each line in
			the file.  It now uses much less, though still
			proportionally to the file size.

 335.	[bug]		named would occasionally attempt recursion when
			it was disallowed or undesired.

 333.	[bug]		The resolver incorrectly accepted referrals to
			domains that were not parents of the query name,
			causing assertion failures.

 331.	[bug]		Only log "recursion denied" if RD is set. (RT #178)

	--- 9.0.0rc1 released ---

 329.	[func]		omapi_auth_register() now takes a size_t argument for
			the length of a key's secret data.  Previously
			OMAPI only stored secrets up to the first NUL byte.

 328.	[func]		Added isc_base64_decodestring().

 325.	[bug]		isc_lex_gettoken was processing octal strings when
			ISC_LEXOPT_CNUMBER was not set.

 324.	[func]		In the resolver, turn EDNS0 off if there is no
			response after a number of retransmissions.
			This is to allow queries some chance of succeeding
			even if all the authoritative servers of a zone
			silently discard EDNS0 requests instead of 
			sending an error response like they ought to.

 323.	[bug]		dns_rbt_findname() did not ignore empty rbt nodes.
			Because of this, servers authoritative for a parent 
			and grandchild zone but not authoritative for the
			intervening child zone did not correctly issue
			referrals to the servers of the child zone.

 322.	[bug]		Queries for KEY RRs are now sent to the parent 
			server before the authoritative one, making